--- a/alberto_implementation.Rmd
+++ b/alberto_implementation.Rmd
@@ -99,10 +99,29 @@ ggplot(LowDF, aes(x=phenotype, y=n)) +
   geom_boxplot(outlier.shape = NA) + coord_cartesian(ylim =  c(0, 300)) + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) + ggtitle("Phenotypes with low number of cells")
 
 ```
+Compare this to nabucco data:
+
+```{r}
+nabucco_data <- read_tsv(here('DATA/nabucco_1_densities.tsv'))
+
+ggplot(nabucco_data) + geom_bar(aes(x=phenotype, y=n, fill=tnumber), stat="identity") + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) + ggtitle("Number of cells per phenotype")
+
+ggplot(nabucco_data, aes(x=phenotype, y=n))+
+    geom_boxplot() + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) + ggtitle("Number of cells per phenotype")
+
+nabucco_data_stromal <- nabucco_data %>% filter(!phenotype %in% c('negative', 'PanCK+'))
+
+ggplot(nabucco_data_stromal, aes(x=phenotype, y=n)) + coord_cartesian(ylim =  c(0, 3000)) + 
+    geom_boxplot() + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) + ggtitle("Number of cells per phenotype")
+
+```
+
+
 
 Compute all 1-NN distances.
 
 ```{r 1-NN distances}
+tic('total time')
 tic('1-NN distances')
 # call cores (parallelization)
 # Comment this because of limitation on core usability in darwin
@@ -138,8 +157,8 @@ distances <- function(x, phenotype1,phenotype2) {
 }
 
 # Define which phenotypes will be studied (UNIQUE CELL TYPES IN YOUR DATASET)
-# phenotypes <- unique(cells$phenotype) #All cell types
-phenotypes <- unique(phenotype_list$stromal_immune$pg_id_map$meta_description)[1] #Take only 1 for debugging
+phenotypes <- unique(cells$phenotype) #All cell types
+# phenotypes <- unique(phenotype_list$stromal_immune$pg_id_map$meta_description)[1:2] #Take only 1 for debugging
 print(paste0("The phenotypes we are considering: ", paste(phenotypes,collapse = ', ')))
 
 # Compute 1-NN for all combinations of samples (n=24) x phenotype FROM (n=7) x phenotype TO (n=7)
@@ -234,23 +253,24 @@ LongBinCounts_300 <- bind_rows(BinCounts_300, .id = "nth_window")
 # WinMean is the X coordinate of your "calculated histogram"
 LongBinCounts_300$WinMean <- dfslides_300$V3[match(LongBinCounts_300$nth_window, dfslides_300$ID)]
 
-# Area not available, so compute with max and min x and y coordinate
-# ALTERNATIVE METHOD? CONVEX HULL
-areas <- left_join(aggregate(Xcenter ~ tnumber, cells, function(x) min(x)),
-                   aggregate(Xcenter ~ tnumber, cells, function(x) max(x)), by='tnumber')
-areas <- left_join(areas,aggregate(Ycenter ~ tnumber, cells, function(x) min(x)), by='tnumber')
-areas <- left_join(areas,aggregate(Ycenter ~ tnumber, cells, function(x) max(x)), by='tnumber')
-areas$area <- (areas[,3]-areas[,2])*(areas[,5]-areas[,4])*0.001 #area in mm
-
-# Match total areas of the tissue 
-LongBinCounts_300$tnumber <- as.integer(LongBinCounts_300$tnumber)
-LongBinCounts_300$Area <- LongBinCounts_300 %>%
-  left_join(data.frame(areas), by='tnumber') %>%
-  mutate(Area=area) %>% pull(Area)
+# # Area not available, so compute with max and min x and y coordinate
+# # ALTERNATIVE METHOD? CONVEX HULL
+# areas <- left_join(aggregate(Xcenter ~ tnumber, cells, function(x) min(x)),
+#                    aggregate(Xcenter ~ tnumber, cells, function(x) max(x)), by='tnumber')
+# areas <- left_join(areas,aggregate(Ycenter ~ tnumber, cells, function(x) min(x)), by='tnumber')
+# areas <- left_join(areas,aggregate(Ycenter ~ tnumber, cells, function(x) max(x)), by='tnumber')
+# areas$area <- (areas[,3]-areas[,2])*(areas[,5]-areas[,4])*0.001 #area in mm
+# 
+# # Match total areas of the tissue 
+# LongBinCounts_300$tnumber <- as.integer(LongBinCounts_300$tnumber)
+# LongBinCounts_300$Area <- LongBinCounts_300 %>%
+#   left_join(data.frame(areas), by='tnumber') %>%
+#   mutate(Area=area) %>% pull(Area)
 
 # N.per.mm2 is the Y coordinate of your "calculated histogram"
 # Normalize for area
 # LongBinCounts_300$N.per.mm2 <- LongBinCounts_300$N / LongBinCounts_300$Area
+
 # Might not be necessary due to AUC normalization [COMPARE]
 LongBinCounts_300$N.per.mm2 <- LongBinCounts_300$N
 
@@ -263,13 +283,14 @@ funAUC <- function(x,y){
 
 AUCScaledSlides_300 <- LongBinCounts_300 %>%
   dplyr::group_by(phenotype_from, phenotype_to, tnumber) %>%
+  dplyr::filter(n() >= 1) %>% 
   dplyr::mutate(N.per.mm2.scaled = N.per.mm2 / funAUC(WinMean, N.per.mm2))
 
 stopifnot(!(Inf %in% AUCScaledSlides_300$N.per.mm2.scaled))
 
 # Sometimes there are Infinite values here in case of small number of cells
 # Remove these samples
-# AUCScaledSlides_300 <- AUCScaledSlides_300[!is.infinite(AUCScaledSlides_300$N.per.mm2.scaled),]
+AUCScaledSlides_300 <- AUCScaledSlides_300[!is.infinite(AUCScaledSlides_300$N.per.mm2.scaled),]
 
 #double check if the AUC of AUCs is 1
 AUCcheck <- AUCScaledSlides_300 %>%
@@ -279,7 +300,7 @@ stopifnot(length(unique(lapply(unique(AUCcheck$AUC), round)))==1)
 
 #save this
 write_delim(AUCScaledSlides_300 %>% 
-              mutate(phenotype_combo=paste(phenotype_from,phenotype_to,sep='_to_')), paste(here('scratch/AUCScaledSlides_300'), '.tsv', sep=''),delim='\t')
+              mutate(phenotype_combo=paste(phenotype_from,phenotype_to,sep='_to_')), paste(here('scratch/AUCScaledSlides_300_ALL'), '.tsv', sep=''),delim='\t')
 
 toc()
 ```
@@ -354,17 +375,8 @@ all_combos_dists <- foreach(tn = unique(all_distances_data %>% pull(tnumber)), .
                                       combo = rep(combo, length(aldists))))
 
   }
-  aldistsdf
+  return(aldistsdf)
 }
-
-
-# Fit a Weibull distribution by Maximum likelihood (this is an initial estimation)
-initial_params <- data.frame(matrix(ncol=5, nrow=0))
-colnames(initial_params) <- c('term','estimate','std.error', 'tnumber','combo')
-initial_params <- initial_params %>% 
-  mutate(term=as.character(term), estimate=as.numeric(estimate), `std.error`=as.numeric(`std.error`),tnumber=as.numeric(tnumber),
-         combo=as.character(combo))
-
 
 stopCluster(cl)
 
@@ -388,11 +400,11 @@ for(combo in unique(all_distances_data %>%  pull(phenotype_combo))){
     if(str_detect(combo, 'PanCK\\+_') | str_detect(combo, 'negative_')){
       params <- fitdist(all_combos_dists %>%
                           filter(combo == combo) %>% filter(tnumber == tn)  %>%
-                          pull(dists) ,"weibull") %>% summary
+                          pull(dists) ,"weibull", lower = c(0, 0)) %>% summary
     } else{
       params <- fitdist(all_combos_dists %>%
                           filter(combo == combo) %>% filter(tnumber == tn) %>% filter(dists < 100) %>%
-                          pull(dists) ,"weibull") %>% summary
+                          pull(dists) ,"weibull", lower = c(0, 0)) %>% summary
     }
     class(params) <- c("fitdist", "fitdistr")
     params <- broom::tidy(params)
@@ -411,64 +423,17 @@ toc()
 
 ```
 Take a look at the initial parameter estimation.
-```{r}
-# Multiple plot function
-#
-# ggplot objects can be passed in ..., or to plotlist (as a list of ggplot objects)
-# - cols:   Number of columns in layout
-# - layout: A matrix specifying the layout. If present, 'cols' is ignored.
-#
-# If the layout is something like matrix(c(1,2,3,3), nrow=2, byrow=TRUE),
-# then plot 1 will go in the upper left, 2 will go in the upper right, and
-# 3 will go all the way across the bottom.
-#
-multiplot <- function(..., plotlist=NULL, file, cols=1, layout=NULL) {
-  library(grid)
-
-  # Make a list from the ... arguments and plotlist
-  plots <- c(list(...), plotlist)
-
-  numPlots = length(plots)
-
-  # If layout is NULL, then use 'cols' to determine layout
-  if (is.null(layout)) {
-    # Make the panel
-    # ncol: Number of columns of plots
-    # nrow: Number of rows needed, calculated from # of cols
-    layout <- matrix(seq(1, cols * ceiling(numPlots/cols)),
-                    ncol = cols, nrow = ceiling(numPlots/cols))
-  }
-
- if (numPlots==1) {
-    print(plots[[1]])
-
-  } else {
-    # Set up the page
-    grid.newpage()
-    pushViewport(viewport(layout = grid.layout(nrow(layout), ncol(layout))))
-
-    # Make each plot, in the correct location
-    for (i in 1:numPlots) {
-      # Get the i,j matrix positions of the regions that contain this subplot
-      matchidx <- as.data.frame(which(layout == i, arr.ind = TRUE))
-
-      print(plots[[i]], vp = viewport(layout.pos.row = matchidx$row,
-                                      layout.pos.col = matchidx$col))
-    }
-  }
-}
-```
-
 
 ```{r}
-# Fit raw normalized data with weibull distribution with initial paraneters
+# Fit raw normalized data with weibull distribution with initial parameters
 plts <- list()
-for (t in 1:20){
+samples <- sample(1:length(unique(all_distances_data$tnumber)), 3, replace=FALSE)
+for (t in samples){
   for (c in unique(all_distances_data$phenotype_combo)){
       hist <- ggplot(all_distances_data[all_distances_data$tnumber == t & all_distances_data$phenotype_combo == c ,]) +
         geom_bar(aes(x=distance_window, y=N.per.mm2.scaled), stat="identity") +
         stat_function(fun = dweibull, args = list(shape = initial_params_weib[initial_params_weib$tnumber==t & initial_params_weib$term=='shape','estimate'],
-                                                  scale = initial_params_weib[initial_params_weib$tnumber==t & initial_params_weib$term=='scale','estimate'])) + ggtitle(paste("tnumber: ", t, "combi: ", c))
+                                                  scale = initial_params_weib[initial_params_weib$tnumber==t & initial_params_weib$term=='scale','estimate'])) + ggtitle(paste("tnumber: ", t, "combi: ", c)) + xlim(0,300)
   
     print(hist)
   }
@@ -665,12 +630,12 @@ for(threshold_cells in c(0,20,50,70,100)){
       # Fit Weibull distribution
       ## If fit succeeds, a nlme model is returned, otherwise a character
       ## with the name of the failed phenotype combination is returned
-      pipeline_run <- fit_data(xy_data_exc_oct, combi, n_cells, 
+      pipeline_run <- fit_data(xy_data_exc_oct, combi, n_cells,
                                threshold_cells, initial_params)
       model_objects <- append(model_objects,
                               list(combi=pipeline_run[['model']]))
       fitted_model <- tail(model_objects, 1)[[1]] # retrieve fitted model in the for loop
-      # If the model successfully fitted, append estimated parameters of the model                        
+      # If the model successfully fitted, append estimated parameters of the model
       # if(class(fitted_model)  != 'character'){
       if(!is(fitted_model, 'character')){
         # Weibull parameters:
@@ -681,8 +646,8 @@ for(threshold_cells in c(0,20,50,70,100)){
           mutate(phenotype_combo=combi) %>%
           mutate(a=10/(1+exp(-A)),b=500/(1+exp(-B)))
         weib_coefs <- bind_rows(weib_coefs, new_data_weib_param)
-        
-        # x/y coordinates of input / output model: 
+
+        # x/y coordinates of input / output model:
         xy_data_weib <- bind_rows(xy_data_weib,
                                       pipeline_run[['xy_data']] %>% mutate(yhat=fitted(fitted_model)))
       }
@@ -691,12 +656,66 @@ for(threshold_cells in c(0,20,50,70,100)){
   names(model_objects) <- subset_combinations
   # Update subset combinations. Include only phenotype combinations whose modelling failed
   subset_combinations <- names(model_objects)[lapply(model_objects, class) == 'character']
-  
+
   # Update list of succesfully fitted models
   success_models <- append(success_models,
                            model_objects[lapply(model_objects, class) != 'character'])
-  
+
 }
+
+# cores=detectCores()
+# cl <- makeCluster(floor(cores[1]/4)) #not to overload
+# registerDoParallel(cl)
+# 
+# for(threshold_cells in c(0,20,50,70,100)){
+#   # model_objects <- list()
+#   if(length(subset_combinations) > 0){
+#     ## POSSIBLE TO PARELLELIZE
+#     model_objects <- foreach(combi = subset_combinations, .packages="tidyverse", .combine=rbind) %dopar% {
+#       message(threshold_cells)
+#       # Fit Weibull distribution
+#       ## If fit succeeds, a nlme model is returned, otherwise a character
+#       ## with the name of the failed phenotype combination is returned
+#       pipeline_run <- fit_data(xy_data_exc_oct, combi, n_cells,
+#                                threshold_cells, initial_params)
+#       # fitted_model <- tail(model_objects, 1)[[1]] # retrieve fitted model in the for loop
+# 
+#       # fitted_model <-  list(combi=pipeline_run[['model']])[[1]]
+#       # # If the model successfully fitted, append estimated parameters of the model
+#       # if(!is(fitted_model, 'character')){
+#       #   # Weibull parameters:
+#       #   new_data_weib_param <- as_tibble(ranef(fitted_model)) %>%
+#       #     mutate(sample=rownames(ranef(fitted_model))) %>%
+#       #     mutate(A=A + fixef(fitted_model)['A'],
+#       #            B=B+ fixef(fitted_model)['B']) %>%
+#       #     mutate(phenotype_combo=combi) %>%
+#       #     mutate(a=10/(1+exp(-A)),b=500/(1+exp(-B)))
+#       #   weib_coefs <- bind_rows(weib_coefs, new_data_weib_param)
+#       # 
+#       #   # x/y coordinates of input / output model:
+#       #   xy_data_weib <- bind_rows(xy_data_weib,
+#       #                                 pipeline_run[['xy_data']] %>% mutate(yhat=fitted(fitted_model)))
+#       # }
+#       
+# 
+#       return(list(combi=pipeline_run[['model']]))
+#     }
+# 
+#   }
+# 
+#   names(model_objects) <- subset_combinations
+#   # Update subset combinations. Include only phenotype combinations whose modelling failed
+#   subset_combinations <- names(model_objects)[lapply(model_objects, class) == 'character']
+# 
+#   # Update list of succesfully fitted models
+#   success_models <- append(success_models,
+#                            model_objects[lapply(model_objects, class) != 'character'])
+# 
+# }
+# 
+# stopCluster(cl)
+
+toc()
 
 toc()
 ```
@@ -720,23 +739,18 @@ for(combi in names(success_models)){
   
 }
 
-final_parameters %>%
-  # separate(phenotype_combo, into=c('phenotype_from','phenotype_to'),sep='_to_') %>%
-  # mutate(phenotype_to=mapvalues(phenotype_to, from=c('CD20+','CD3+','CD3+FoxP3+',
-  #                                                    'CD68+','CD8+CD3+','PanCK+'),
-  #                               to=c('B-cell','T-helper','Treg','Macrophages','CD8 T-cell','Cancer cell'))) %>%
-  # mutate(phenotype_from=mapvalues(phenotype_from, from=c('CD20+','CD3+','CD3+FoxP3+',
-                                  #                        'CD68+','CD8+CD3+','PanCK+'),
-                                  # to=c('B-cell','T-helper','Treg','Macrophages','CD8 T-cell','Cancer cell'))) %>%
-  # mutate(phenotype_to=paste('to',phenotype_to)) %>%
-  ggplot(aes(x=a, y=b)) +
-  geom_point(alpha=0.7, size=0.5) +
-  # geom_density_2d() +
-  theme_bw() + scale_y_log10() +
-  xlab('Shape') + ylab('Scale') + scale_color_brewer(palette='Set2') +
-  theme(legend.position='right')
 
-ggsave(here('output/ShapeScaleScatterplot.png'))
+point <- ggplot(final_parameters) +
+geom_point(aes(x=a, y=b, color=phenotype_combo), alpha=0.7, size=0.5) +
+# geom_density_2d() +
+theme_bw() + scale_y_log10() +
+xlab('Shape') + ylab('Scale') + scale_color_brewer(palette='Set2') +
+theme(legend.position='right') + ggtitle(c) +ylim(0,300) + xlim(0,5)
+
+print(point)
+
+
+# ggsave(here('output/ShapeScaleScatterplot.png'))
 
 
 
